--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		#vie { color:red; font-size:4em;; font-family:Ribbon 131; font-weight:bold; display:inline;}
 		img { width:3em;}
 		center {position:absolute; top:50%;width:50%; left:25%;}
-		#mot {width:85%;font-size:8em; background-color:#ff4500; color:white; border-radius:10px;}
-		#c {width:55px; height:60px; font-size:60px; background-color:#FEAB30;  border:none;}
+		#mot {width:70%;font-size:8em; background-color:#ff4500; color:white; border-radius:10px;}
+		#c {width:55px; height:60px; font-size:60px; background-color:orange;  border:none; border-radius:5px;}
 		#butt:hover {background-color:black;}
 		#butt {letter-spacing:3px; font-family: Akira Jimbo; font-size:50px; background-color:#ff4500; color:white; border-radius:10px; border:none;}
 		span {position:absolute; top:170px; right:25%;}
