--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 	<meta charset="UTF-8" >
 	<style>
 		@font-face {
-			font-family: 'Akira Jimbo';
-			
-			url('./Akira Jimbo.ttf') format('truetype');
-		}
+            font-family: 'Akira Jimbo';
+            src: url('./Akira Jimbo.ttf') format('truetype');
+        }
 	
 	
 	
