--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
             font-family: 'Akira Jimbo';
             src: url('./Akira Jimbo.ttf') format('truetype');
         }
+		
+		@font-face {
+            font-family: 'Hello';
+            src: url('./Hello.otf') format('opentype');
+        }
 	
 	
 	
